--- a/src/index.css
+++ b/src/index.css
@@ -191,6 +191,28 @@ a {
   }
 }
 
+.main {
+  padding-bottom: 30px;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 10px;
+}
+
+.save-btn {
+  padding: 20px 20px;
+  background-color: #00FF41;
+  border-radius: 5px;
+  width: 100%;
+  min-height: 40px;
+  font-size: 20px;
+  font-weight: 500; 
+  margin-top: 30px;
+}
+
 @media (max-width: 450px) {
   .login-box {
     max-width: 90%;
