add-saves-list-layout-and-remove-header-icons

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -20,6 +20,13 @@
     gap: 10px;
 }
 
+.saveWrapper {
+    display: flex;
+    align-items: center; 
+    gap: 10px;
+    cursor: pointer;
+}
+
 .icon {
     cursor: pointer;
     width: 30px;
