--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
-body {
-  margin: 0;
+* {
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -200,17 +203,27 @@ a {
   flex-direction: column;
   width: 100%;
   gap: 10px;
+  margin-top: 15px;
 }
 
+.damage-btn, 
 .save-btn {
-  padding: 20px 20px;
-  background-color: #00FF41;
+  padding: 20px;
   border-radius: 5px;
   width: 100%;
   min-height: 40px;
   font-size: 20px;
-  font-weight: 500; 
+  font-weight: 500;
   margin-top: 30px;
+}
+
+.damage-btn {
+  background-color: rgb(190, 14, 14);
+  color: #fff;
+}
+
+.save-btn {
+  background-color: #00FF41;
 }
 
 @media (max-width: 450px) {
