--- a/src/components/Saves/Save/save.module.css
+++ b/src/components/Saves/Save/save.module.css
@@ -1,13 +1,18 @@
 .wrapper {
     padding: 10px;
-    max-width: 200px;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    gap: 5px;
+    gap: 10px;
     align-items: center;
     background-color: rgba(0,0,0,0.3);
     border-radius: 5px;
+}
+
+.wrapperBtns {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 .importBtn {
@@ -15,4 +20,14 @@
     color: #fff;
     border-bottom: 1px solid #fff;
     cursor: pointer;
+}
+
+.deleteBtn {
+    color: red;
+    cursor: pointer;
+    border-bottom: 1px solid transparent;
+}
+
+.deleteBtn:hover {
+    border-bottom: 1px solid red;
 }
