--- a/src/index.css
+++ b/src/index.css
@@ -206,7 +206,7 @@ a {
   margin-top: 15px;
 }
 
-.damage-btn, 
+.damage-btn,
 .save-btn {
   padding: 20px;
   border-radius: 5px;
@@ -223,7 +223,7 @@ a {
 }
 
 .save-btn {
-  background-color: #00FF41;
+  background-color: #00ff41;
 }
 
 @media (max-width: 450px) {
